--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -10,6 +10,7 @@
     background-color: $blue;
     @include flex;
     flex-direction: column;
+    z-index: 10;
 
     &--open {
         top: 0;
